--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "customer-service-api",
+  "name": "cep-api",
   "version": "1.0.0",
-  "description": "This is the API for the Customer Service module.",
+  "description": "This is the API for the Cep module.",
   "main": "src/app.ts",
-  "repository": "https://bitbucket.org/spotmetrics/customer-service-api.git",
-  "author": "Carlos Moreira <carlos.moreira@spotmetrics.com>",
+  "repository": "https://github.com/omayconaguiar/Search-for-Cep-And-Address",
+  "author": "Maycon Aguiar <maycon@dcc.ufrj.br>",
   "private": true,
   "scripts": {
     "dev": "npm-run-all -p dev:*",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "ajv": "6.11.0",
-    "ascii-encoding": "^1.1.4",
     "aws-sdk": "2.610.0",
     "axios": "0.19.2",
     "base64-arraybuffer": "0.2.0",
@@ -31,8 +30,6 @@
     "lodash": "4.17.15",
     "mocha": "^8.2.1",
     "moment": "2.24.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
     "nyc": "^15.1.0",
     "path": "^0.12.7",
     "pdfkit": "0.11.0",
