--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,6 @@ PORT=3000
 LOG_LEVEL='debug'
 
 DB_NAME='test'
-DB_USERNAME='test'
-DB_PASSWORD='test'
+DB_USERNAME='postgres'
+DB_PASSWORD='postgres'
 
